# backend/routes/search.routes.js
@@ -4,4 +4,6 @@ const searchController = require('../controller/search.controller');
 
 router.get('/', searchController.searchVideos);
 
+router.get('/similar/:keyframe_id', searchController.findSimilar);
+
 module.exports = router;
